--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             </form>
 
             <div id="product-image-section" style="padding: 40px 0; text-align: center;">
-                <h2 class="section-title" style="justify-content: center; margin-bottom: 20px;">美味實品照</h2>
+                <h2 class="section-title" style="justify-content: center; margin-bottom: 20px;">詳細資訊</h2>
                 
                 <div class="swiper">
                     <div class="swiper-wrapper">
