--- a/index.html
+++ b/index.html
@@ -78,19 +78,25 @@
         .jump-btn {
             display: inline-block;
             margin-top: 20px;
-            padding: 10px 20px;
-            background-color: rgba(255, 255, 255, 0.2);
+            padding: 12px 28px;
+            background-color: #ff9a62; /* 改成橘色系背景 */
             color: white;
             border-radius: 50px;
             text-decoration: none;
             font-weight: bold;
             transition: all 0.3s ease;
-            border: 1px solid rgba(255, 255, 255, 0.5);
+            border: 2px solid rgba(255, 255, 255, 0.7); /* 白色半透明邊框 */
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+
+            /* 以下是解決點擊問題的關鍵 */
+            position: relative;
+            z-index: 1; 
         }
 
         .jump-btn:hover {
-            background-color: rgba(255, 255, 255, 0.4);
+            background-color: #ff8a4a; /* 滑鼠移上去的顏色 */
             transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
         }
 
         .form-container {
