--- a/index.html
+++ b/index.html
@@ -570,15 +570,14 @@
                 
                 <div class="swiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="1.jpg" alt="商品介紹"></div>
                         <div class="swiper-slide"><img src="2.jpg" alt="商品介紹"></div>
                         <div class="swiper-slide"><img src="3.jpg" alt="商品介紹"></div>
-                        <div class="swiper-slide"><img src="4.png" alt="商品介紹"></div>
-                        <div class="swiper-slide"><img src="5.png" alt="商品介紹"></div>
-                        <div class="swiper-slide"><img src="6.png" alt="商品介紹"></div>
-                        <div class="swiper-slide"><img src="7.png" alt="熱量表"></div>
-                        <div class="swiper-slide"><img src="8.png" alt="熱量表"></div>
-                        <div class="swiper-slide"><img src="9.png" alt="熱量表"></div>
+                        <div class="swiper-slide"><img src="4.jpg" alt="商品介紹"></div>
+                        <div class="swiper-slide"><img src="5.jpg" alt="商品介紹"></div>
+                        <div class="swiper-slide"><img src="6.jpg" alt="商品介紹"></div>
+                        <div class="swiper-slide"><img src="7.jpg" alt="熱量表"></div>
+                        <div class="swiper-slide"><img src="8.jpg" alt="熱量表"></div>
+                        <div class="swiper-slide"><img src="9.jpg" alt="熱量表"></div>
                         </div>
                     <div class="swiper-pagination"></div>
 
