--- a/index.html
+++ b/index.html
@@ -546,10 +546,6 @@
                             <input type="tel" id="phone" name="phone" required>
                         </div>
                         <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email">
-                        </div>
-                        <div class="form-group">
                             <label for="pickup_method">取貨方式 *</label>
                             <select id="pickup_method" name="pickup_method" required style="padding: 12px 15px; width: 100%; border: 2px solid #e9ecef; border-radius: 10px; font-size: 1em; background: white;">
                                 <option value="" disabled selected>-- 請選擇 --</option>
@@ -562,6 +558,16 @@
                         <label for="notes">備註</label>
                         <textarea id="notes" name="notes" placeholder="有任何特殊需求或備註請在此填寫..."></textarea>
                     </div>
+                </div>
+
+                <div class="section">
+                    <h2 class="section-title">注意事項</h2>
+                    <ul>
+                        <li>限量100包，超過依照填寫時間判斷先後順序。</li>
+                        <li>有開團成功再通知大家，價錢可能會變動，但只會變便宜不會變貴。</li>
+                        <li>如有任何訂單問題，請直接聯繫予綸。</li>
+                        <li>取貨時間及地點會再另行通知。</li>
+                    </ul>
                 </div>
 
                 <button type="submit" class="submit-btn">
@@ -591,6 +597,11 @@
             </div>
 
         </div>
+    </div>
+
+    <div class="footer-author">
+        <p>網站作者：許予綸 </p>
+        <p>聯絡信箱：<a href="mailto:alan61220@gmail.com">alan61220@gmail.com</a></p>
     </div>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
