--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                             <select id="pickup_method" name="pickup_method" required style="padding: 12px 15px; width: 100%; border: 2px solid #e9ecef; border-radius: 10px; font-size: 1em; background: white;">
                                 <option value="" disabled selected>-- 請選擇 --</option>
                                 <option value="公司領">台北公司領</option>
-                                <option value="自取">自取</option>
+                                <option value="自取">三重永福街自取(需自行搭電梯上樓)</option>
                             </select>
                         </div>
                     </div>
