--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>雞胸肉團購表單</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
         /* ... 這裡的所有 CSS 樣式都和之前一樣 ... */
@@ -362,6 +363,51 @@
             background-color: #ff6b6b;
         }
 
+        /* Footer Author Info Styling */
+        .footer-author {
+            text-align: center;
+            margin-top: 40px;
+            padding: 30px;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05)); /* 半透明漸層 */
+            backdrop-filter: blur(5px); /* 輕微模糊效果 */
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            color: white; /* 亮色文字 */
+            font-size: 1em;
+            line-height: 1.6;
+            animation: fadeIn 1s ease-out; /* 淡入動畫 */
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .footer-author p {
+            margin: 8px 0;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3); /* 文字陰影 */
+            display: flex; /* 讓圖標和文字在同一行 */
+            justify-content: center; /* 水平居中 */
+            align-items: center; /* 垂直居中 */
+        }
+
+        .footer-author i {
+            margin-right: 10px; /* 圖標與文字的間距 */
+            font-size: 1.2em; /* 圖標大小 */
+            color: #ffe066; /* 圖標顏色 */
+        }
+
+        .footer-author a {
+            color: #ffe066; /* 連結顏色 */
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease, transform 0.3s ease; /* 增加懸停動畫 */
+        }
+
+        .footer-author a:hover {
+            color: #fff; /* 懸停時顏色變白 */
+            transform: translateY(-2px); /* 輕微上移 */
+        }
 
         @media (max-width: 768px) {
             .header h1 {
@@ -378,6 +424,10 @@
             
             .flavor-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .footer-author {
+                padding: 20px;
             }
         }
     </style>
@@ -559,7 +609,7 @@
                         <textarea id="notes" name="notes" placeholder="有任何特殊需求或備註請在此填寫..."></textarea>
                     </div>
                 </div>
-
+                
                 <div class="section">
                     <h2 class="section-title">注意事項</h2>
                     <ul>
@@ -600,8 +650,9 @@
     </div>
 
     <div class="footer-author">
-        <p>網站作者：許予綸 </p>
-        <p>聯絡信箱：<a href="mailto:alan61220@gmail.com">alan61220@gmail.com</a></p>
+        <p><i class="fas fa-user-circle"></i> 網站作者：許予綸</p>
+        <p><i class="fas fa-envelope"></i> 聯絡信箱：<a href="mailto:alan61220@gmail.com">alan61220@gmail.com</a></p>
+        <p><i class="fas fa-code"></i> 版權所有 © 2025 YuLun </p>
     </div>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
